--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -9,32 +9,15 @@
 
     // Font & Appearance//
 
+    "workbench.colorTheme": "One Dark Pro",
     "editor.fontFamily": "Menlo",
+    "editor.fontSize": 14,
     "editor.lineHeight": 25,
-    "workbench.colorTheme": "Material Theme Palenight High Contrast",
     "workbench.iconTheme": "material-icon-theme",
+    "terminal.integrated.fontFamily": "Menlo",
     "terminal.integrated.fontSize": 14,
 
     // VIM //
 
-    "vim.useCtrlKeys": true,
-    "vim.leader": "<space>",
     "vim.useSystemClipboard": true,
-    "vim.normalModeKeyBindingsNonRecursive": [
-        { "before": ["leader", "f", "s"], "commands": [ "workbench.action.files.save" ] },
-        { "before": ["leader", "w", "d"], "commands": [ "workbench.action.closeActiveEditor" ] },
-        { "before": ["leader", "w", "h"], "commands": [ "workbench.action.focusLeftGroup" ] },
-        { "before": ["leader", "w", "j"], "commands": [ "workbench.action.focusBelowGroup" ] },
-        { "before": ["leader", "w", "k"], "commands": [ "workbench.action.focusAboveGroup" ] },
-        { "before": ["leader", "w", "l"], "commands": [ "workbench.action.focusRightGroup" ] },
-        { "before": ["leader", "w", "/"], "commands": [ "workbench.action.splitEditorRight" ] },
-        { "before": ["leader", "w", "\\"], "commands": [ "workbench.action.splitEditorDown" ] },
-        { "before": ["leader", "s", "s"], "commands": [ "actions.find" ] },
-        { "before": ["leader", "s", "r"], "commands": [ "editor.action.startFindReplaceAction" ] },
-        { "before": ["leader", "p", "p"], "commands": [ "projectManager.listProjects" ] },
-        { "before": ["leader", "p", "s"], "commands": [ "workbench.action.findInFiles" ] },
-        { "before": ["leader", "p", "r"], "commands": [ "workbench.action.replaceInFiles" ] },
-        { "before": ["leader", "p", "f"], "commands": [ "workbench.action.quickOpen" ] },
-        { "before": ["leader", "leader"], "commands": [ "workbench.action.showCommands" ] },
-    ],
 }
