Switch to consolas. Add script to load/save

--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -3,8 +3,8 @@
     "security.workspace.trust.enabled": false,
 
     // Editor
-    "editor.fontFamily": "JetBrains Mono",
-    "editor.fontSize": 14,
+    "editor.fontFamily": "Consolas",
+    "editor.fontSize": 15,
     "editor.inlayHints.enabled": "offUnlessPressed",
     "editor.minimap.enabled": false,
 
