--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -12,7 +12,7 @@
     "terminal.integrated.fontFamily": "JetBrains Mono",
     "terminal.integrated.fontSize": 14,
     "workbench.startupEditor": "none",
-    "workbench.colorTheme": "Atom One Light",
+    "workbench.colorTheme": "Ayu Mirage",
 
     // Extensions
     "extensions.ignoreRecommendations": true,
