--- a/python/.pythonrc
+++ b/python/.pythonrc
@@ -4,9 +4,25 @@ import glob
 import pprint
 
 def ex(cmd):
-	return subprocess.Popen( \
+	child = subprocess.Popen( \
 		cmd, \
 		shell=True, text=True, \
 		stdout=subprocess.PIPE, stderr=subprocess.PIPE \
-	).communicate()
+	)
 
+	(stdout, stderr) = child.communicate()
+	ret = child.returncode
+
+	if ret != 0:
+		raise Exception(stderr)
+	
+	return stdout
+
+def intersperse(iterable, delimiter):
+    it = iter(iterable)
+
+    yield next(it)
+
+    for x in it:
+        yield delimiter
+        yield x
