--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,3 +19,11 @@ bind r source-file ~/.tmux.conf
 
 set -g mouse on
 
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'frappe'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/.tmux/plugins/tpm/tpm'
