--- a/python/.pythonrc
+++ b/python/.pythonrc
@@ -6,7 +6,7 @@ import pprint
 def ex(cmd):
 	child = subprocess.Popen( \
 		cmd, \
-		shell=True, text=True, \
+		shell=True, \
 		stdout=subprocess.PIPE, stderr=subprocess.PIPE \
 	)
 
@@ -14,7 +14,7 @@ def ex(cmd):
 	ret = child.returncode
 
 	if ret != 0:
-		raise Exception(stderr)
+		raise Exception("Command failed: %s\n\n%s%s" % (cmd, stderr, stdout))
 	
 	return stdout
 
