--- a/python/.pythonrc
+++ b/python/.pythonrc
@@ -6,7 +6,7 @@ import pprint
 def ex(cmd):
 	child = subprocess.Popen( \
 		cmd, \
-		shell=True, text=True, \
+		shell=True, \
 		stdout=subprocess.PIPE, stderr=subprocess.PIPE \
 	)
 
