--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ set -g mouse on
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'frappe'
+# set -g @plugin 'catppuccin/tmux'
+# set -g @catppuccin_flavour 'frappe'
 
 run '~/.tmux/plugins/tpm/tpm'
