--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,3 +26,8 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "screen-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
