--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,7 @@
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /opt/homebrew/bin/fish
+
+set-environment -g PATH "/opt/homebrew/bin:$PATH"
+set-environment -g EDITOR "vi"
 
 unbind C-b
 set-option -g prefix C-a
@@ -19,6 +22,10 @@ bind r source-file ~/.tmux.conf
 
 set -g mouse on
 
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "screen-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -26,8 +33,4 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe'
 
 run '~/.tmux/plugins/tpm/tpm'
-
-set -g terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "screen-256color"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
