--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,9 +19,8 @@ bind r source-file ~/.tmux.conf
 
 set -g mouse on
 
-set -g terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "screen-256color"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
+set-option -sg default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm*:256"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -30,4 +29,3 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe'
 
 run '~/.tmux/plugins/tpm/tpm'
-
