Revert "Alacritty + Dracula"
This reverts commit 5ac78e135c73be1fec711f14bdb33477e46a899d.

--- a/alacritty/.alacritty.toml
+++ b/alacritty/.alacritty.toml
@@ -1,9 +1,9 @@
 import = [
-	"~/.dotfiles/alacritty/themes/dracula.toml"
+	"~/.dotfiles/alacritty/themes/catppuccin-mocha.toml"
 ]
 
 [shell]
-program = "/bin/zsh"
+program = "zsh"
 
 [font]
 
