--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,10 +17,12 @@ bind m clear-history
 
 bind r source-file ~/.tmux.conf
 
+set-option -g default-shell /bin/zsh
+
 set -g mouse on
 
-set-option -sg default-terminal "screen-256color"
-set-option -sa terminal-overrides ",xterm*:256"
+# set-option -sg default-terminal "screen-256color"
+# set-option -sa terminal-overrides ",xterm*:256"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
