--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-bind \ split-window -h
+bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
@@ -21,13 +21,24 @@ set-option -g default-shell /bin/zsh
 
 set -g mouse on
 
-# set-option -sg default-terminal "screen-256color"
-# set-option -sa terminal-overrides ",xterm*:256"
+set-option -sg default-terminal "xterm-256color"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe'
 
+set -g @plugin 'pschmitt/tmux-ssh-split'
+set-option -g @ssh-split-h-key "|"
+set-option -g @ssh-split-v-key "-"
+set-option -g @ssh-split-w-key "="
+
 run '~/.tmux/plugins/tpm/tpm'
+
+unbind \'
+bind-key -n \' display-menu -x W -y S \
+    "Break Pane" t break-pane \
+    "Layout Horizontal" h "select-layout even-horizontal"  \
+    "Layout Vertical" k "select-layout even-horizontal"
