Tmux rearrange panes + windows menu

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,4 +41,10 @@ unbind \'
 bind \' display-menu -x W -y S \
     "Break Pane" t break-pane \
     "Layout Horizontal" h "select-layout even-horizontal"  \
-    "Layout Vertical" k "select-layout even-horizontal"
+    "Layout Vertical" k "select-layout even-vertical" \
+    "Layout Tiled" k "select-layout tiled" \
+	"Join Pane Horizontal" j "choose-window 'join-pane -h -s "%%"'" \
+	"Join Pane Vertical" j "choose-window 'join-pane -s "%%"'" \
+	"Move window left" m "swap-window -d -t :-1" \
+	"Move window right" m "swap-window -d -t :+1" \
+
