Better tmux/vim keybindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-bind | split-window -h
+bind \\ split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
@@ -14,6 +14,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind m clear-history
+
+bind x kill-pane
 
 bind r source-file ~/.tmux.conf
 
