Add even-* layouts in tmux menu

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,7 +34,7 @@ set -g @catppuccin_flavour 'frappe'
 
 set -g @plugin 'pschmitt/tmux-ssh-split'
 set-option -g @ssh-split-h-key "|"
-set-option -g @ssh-split-v-key "-"
+set-option -g @ssh-split-v-key "_"
 set-option -g @ssh-split-w-key "="
 
 run '~/.tmux/plugins/tpm/tpm'
@@ -44,6 +44,8 @@ bind \' display-menu -x W -y S \
     "Break Pane" t break-pane \
     "Layout Horizontal" h "select-layout even-horizontal"  \
     "Layout Vertical" k "select-layout even-vertical" \
+    "Layout Main-Horizontal" h "select-layout main-horizontal"  \
+    "Layout Main-Vertical" k "select-layout main-vertical" \
     "Layout Tiled" k "select-layout tiled" \
 	"Join Pane Horizontal" j "choose-window 'join-pane -h -s "%%"'" \
 	"Join Pane Vertical" j "choose-window 'join-pane -s "%%"'" \
