--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,7 +15,7 @@ bind k select-pane -U
 bind l select-pane -R
 bind m clear-history
 
-bind x kill-pane
+bind x confirm-before -p "kill-window #W? (y/n)" kill-window
 
 bind r source-file ~/.tmux.conf
 
