Fix tmux rename window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@ setw -g mode-keys vi
 
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
+bind-key -n C-b send-prefix
 
 bind \\ split-window -h
 bind - split-window -v
@@ -31,6 +31,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe'
+# rename-window fix
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
 
 set -g @plugin 'pschmitt/tmux-ssh-split'
 set-option -g @ssh-split-h-key "|"
@@ -41,14 +44,14 @@ run '~/.tmux/plugins/tpm/tpm'
 
 unbind \'
 bind \' display-menu -x W -y S \
-    "Break Pane" t break-pane \
-    "Layout Horizontal" h "select-layout even-horizontal"  \
-    "Layout Vertical" k "select-layout even-vertical" \
-    "Layout Main-Horizontal" h "select-layout main-horizontal"  \
-    "Layout Main-Vertical" k "select-layout main-vertical" \
-    "Layout Tiled" k "select-layout tiled" \
-	"Join Pane Horizontal" j "choose-window 'join-pane -h -s "%%"'" \
-	"Join Pane Vertical" j "choose-window 'join-pane -s "%%"'" \
-	"Move window left" m "swap-window -d -t :-1" \
-	"Move window right" m "swap-window -d -t :+1" \
+    "Break Pane" a break-pane \
+    "Layout Horizontal" b "select-layout even-horizontal"  \
+    "Layout Vertical" c "select-layout even-vertical" \
+    "Layout Main-Horizontal" d "select-layout main-horizontal"  \
+    "Layout Main-Vertical" e "select-layout main-vertical" \
+    "Layout Tiled" f "select-layout tiled" \
+	"Join Pane Horizontal" g "choose-window 'join-pane -h -s "%%"'" \
+	"Join Pane Vertical" h "choose-window 'join-pane -s "%%"'" \
+	"Move window left" i "swap-window -d -t :-1" \
+	"Move window right" j "swap-window -d -t :+1" \
 
