Show tmux status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,8 @@ unbind C-b
 set-option -g prefix C-a
 bind-key -n C-b send-prefix
 
-bind \\ split-window -h
-bind - split-window -v
+bind \\ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
@@ -32,8 +32,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe'
 # rename-window fix
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_default_text "#W #F"
+set -g @catppuccin_window_current_text "#W #F"
 
 set -g @plugin 'pschmitt/tmux-ssh-split'
 set-option -g @ssh-split-h-key "|"
