Trying fish shell

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,7 @@ bind x confirm-before -p "kill-pane #W? (y/n)" kill-pane
 
 bind r source-file ~/.tmux.conf
 
-set-option -g default-shell /bin/zsh
+# set-option -g default-shell /usr/local/bin;fish
 
 set -g mouse on
 
