--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,9 @@ set-option -g default-shell /bin/zsh
 
 set -g mouse on
 
-set-option -sg default-terminal "xterm-256color"
+# set-option -sg default-terminal "xterm-256color"
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
