--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -7,7 +7,7 @@
 
     // EDITOR //
 
-    "editor.fontFamily": "JetBrains Mono",
+    "editor.fontFamily": "JetBrainsMono Nerd Font",
     "editor.fontSize": 15,
     "editor.inlayHints.enabled": "offUnlessPressed",
     "editor.minimap.enabled": false,
@@ -25,13 +25,13 @@
 
     "workbench.startupEditor": "none",
     "workbench.editorLargeFileConfirmation": 20,
-    "workbench.sideBar.location": "right",
+    "workbench.sideBar.location": "left",
+    "workbench.activityBar.location": "top",
 
     // THEME //
 
     "window.autoDetectColorScheme": true,
     "workbench.preferredLightColorTheme": "Atom One Light",
-    "workbench.preferredDarkColorTheme": "Catppuccin Mocha",
 
     // TERMINAL //
 
@@ -52,6 +52,17 @@
     // VIM //
 
     "vim.useSystemClipboard": true,
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": ["<leader>", "%"],
+            "commands": [
+                {
+                "command": "editor.emmet.action.matchTag"
+                }
+            ]
+        }
+    ],
+    "vim.foldfix": true,
 
     // PYTHON //
 
@@ -61,36 +72,13 @@
 
     // RUBY //
 
-    "rubyLsp.rubyVersionManager": "rvm",
-    "rubyLsp.enabledFeatures": {
-        "codeActions": true,
-        "diagnostics": true,
-        "documentHighlights": true,
-        "documentLink": true,
-        "documentSymbols": true,
-        "foldingRanges": true,
-        "formatting": true,
-        "hover": true,
-        "inlayHint": true,
-        "onTypeFormatting": true,
-        "selectionRanges": true,
-        "semanticHighlighting": true,
-        "completion": true,
-        "codeLens": true
-    },
-
-    "[ruby]": {
-        "editor.defaultFormatter": "Shopify.ruby-lsp",
-        "editor.formatOnSave": true,
-        "editor.formatOnType": true,
-        "editor.tabSize": 2,
-        "editor.insertSpaces": true,
-        "editor.semanticHighlighting.enabled": true
-    },
+    "sorbet.enabled": true,
 
     // JAVASCRIPT //
 
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
-    }
+    },
+    "diffEditor.maxComputationTime": 0,
+    "workbench.preferredDarkColorTheme": "Catppuccin Frappé"
 }
