tmux monokai theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,13 +1,22 @@
 setw -g mode-keys vi
 
+# Prefix #
+
 unbind C-b
 set-option -g prefix C-a
 bind-key -n C-b send-prefix
+
+# Window management #
 
 bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
+
+set -g @plugin 'pschmitt/tmux-ssh-split'
+set-option -g @ssh-split-h-key "|"
+set-option -g @ssh-split-v-key "_"
+set-option -g @ssh-split-w-key "="
 
 bind h select-pane -L
 bind j select-pane -D
@@ -15,34 +24,39 @@ bind k select-pane -U
 bind l select-pane -R
 bind m clear-history
 
+
 bind x confirm-before -p "kill-pane #W? (y/n)" kill-pane
 
-bind r source-file ~/.tmux.conf
+# Basics #
 
 set-option -g default-shell /bin/zsh
-
-set -g mouse on
 
 # set-option -sg default-terminal "xterm-256color"
 set -g default-terminal "$TERM"
 set -ag terminal-overrides ",$TERM:Tc"
 
-# Plugins
+set -g mouse on
+
+# Reload settings
+bind r source-file ~/.tmux.conf
+
+# Plugins #
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'frappe'
+# Theme
+set -g @plugin 'maxpetretta/tmux-monokai-pro'
+# set -g @plugin 'catppuccin/tmux'
+# set -g @catppuccin_flavour 'frappe'
+
 # rename-window fix
 set -g @catppuccin_window_default_text "#W #F"
 set -g @catppuccin_window_current_text "#W #F"
 
-set -g @plugin 'pschmitt/tmux-ssh-split'
-set-option -g @ssh-split-h-key "|"
-set-option -g @ssh-split-v-key "_"
-set-option -g @ssh-split-w-key "="
-
 run '~/.tmux/plugins/tpm/tpm'
+
+# Context menu #
 
 unbind \'
 bind \' display-menu -x W -y S \
