Tmux clipboard passthrough

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,7 +24,6 @@ bind k select-pane -U
 bind l select-pane -R
 bind m clear-history
 
-
 bind x confirm-before -p "kill-pane #W? (y/n)" kill-pane
 
 # Basics #
@@ -34,6 +33,8 @@ set-option -g default-shell /bin/zsh
 # set-option -sg default-terminal "xterm-256color"
 set -g default-terminal "$TERM"
 set -ag terminal-overrides ",$TERM:Tc"
+
+set -g set-clipboard on
 
 set -g mouse on
 
