Add python site packages to vs code

--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -93,7 +93,8 @@
         "~/devenv/repos/nimbus",
         "~/devenv/repos/napi",
         "~/devenv/repos/apinext",
-        "~/devenv/repos/stratus"
+        "~/devenv/repos/stratus",
+        "/home/vvelecho/.local/lib/python3.10/site-packages"
     ],
 
     // Ruby //
